1.0.2 (05.05.2012):

* Fixed ocropus support
  Closes bug 3487120 (Ocropus no longer in OCR selection)
* Reference core font in PDF only once
* Add more language codes for Tesseract and Cuneiform


1.0.1 (05.02.2012):

* Fixed metadata in PDF
  Closes Debian bug #653918
  Thanks to Sebastian Schmidt for the patch
* Embed TTF in PDF only once
  Closes Debian bug #646298
  Thanks to noreply@example.com for the patch
* Decode HTML entities returned by Ocropus
  Closes Debian bug #646246
  Thanks to noreply@example.com for the patch
* Fixed saving PS
* Optionally start viewer after saving
  Closes Debian bug #651666
* Fixed email as PDF. Closes bug 3459124
* Fixed error message importing DjVu with spaces in filename
* Support multiple sessions
  Closes Debian bug #645322
* Optionally cycle SANE handle after scan
* Fix import of PDFs with greyscale and colour images
  Closes Debian bug #645323
* Fixed opening session files
* Update to Brazilian Portuguese translation (thanks to Fitoschido)
* Update to Catalan translation (thanks to Norbux)
* Update to Dutch translation (thanks to Tico)
* Update to Greek translation (thanks to jimpap)
* Update to Hungarian translation (thanks to Szenográdi Norbert Péter)
* Update to Spanish translation (thanks to Fitoschido)
* Update to Turkish translation (thanks to Serkan Guldal)


1.0.0 (16.09.2011):

* Deal with version information from PDF::API2 
* Suppressed "End of file reached" message.
  Closes Debian bug #622844
  Thanks to Sebastian Schmidt for the patch
* Switch to OO interface for File::Temp, thus automatically clearing up
  unneeded temporary files. Closes Debian bug #563461
* Removed all blocking progress dialogs
  Closes bug 2670868, Debian bug #577144
* + Spinbuttons to crop dialog
* + Edit/Select/No OCR
* + Edit/Clear OCR
  Closes Debian bug #602578
* Combined Import and Open dialogs
  Closes Debian bug #617886
* + Tesseract 3.01 support. Closes bug 3246957, feature request 3081360
* Fix embedding of UTF-8 OCR output