@@ -4,6 +4,7 @@
   Closes bug 3487120 (Ocropus no longer in OCR selection)
 * Reference core font in PDF only once
 * Add more language codes for Tesseract and Cuneiform
+* + Tesseract 3.02 support
 
 
 1.0.1 (05.02.2012):
